# ag-ui

./: .gitignore  CI_CD_PLAN.md
.cargo/: config.toml
.github/workflows/: deploy-demo.yml
docs/: CI_CD_PLAN.md  CLOUDFLARE_SETUP.md
rust-sdk/: ARCHITECTURE.md  INTEGRATION.md  README.md
rust-sdk/ag-ui-wasm/: Cargo.toml  README.md  README_TESTS.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_QUICK.md  TYPESCRIPT_PARITY.md  fix_tests.rs  fix_tests.sh  fix_tests_proper.py  test.html  test_runner.sh
rust-sdk/ag-ui-wasm/examples/worker/: ARCHITECTURE.md  Cargo.toml  README.md  package.json  test.html  worker.js  wrangler.toml
rust-sdk/ag-ui-wasm/examples/worker/.wrangler/tmp/bundle-CWX4c4/: middleware-insertion-facade.js  middleware-loader.entry.ts
rust-sdk/ag-ui-wasm/examples/worker/.wrangler/tmp/bundle-MCuYYe/: middleware-insertion-facade.js  middleware-loader.entry.ts
rust-sdk/ag-ui-wasm/examples/worker/.wrangler/tmp/bundle-WrPCE0/: middleware-loader.entry.ts
rust-sdk/ag-ui-wasm/examples/worker/.wrangler/tmp/dev-4G271N/: worker.js  worker.js.map
rust-sdk/ag-ui-wasm/examples/worker/src/: lib.rs  worker.rs
rust-sdk/ag-ui-wasm/src/: error.rs  lib.rs
rust-sdk/ag-ui-wasm/src/client/: agent.rs  mod.rs  web_agent.rs
rust-sdk/ag-ui-wasm/src/core/: events.rs  mod.rs  types.rs
rust-sdk/ag-ui-wasm/src/encoder/: mod.rs  sse_encoder.rs
rust-sdk/ag-ui-wasm/src/stream/: event_stream.rs  mod.rs
rust-sdk/ag-ui-wasm/tests/: complete_event_coverage_test.rs  comprehensive_encoder_parity_test.rs  comprehensive_encoder_test.rs  comprehensive_events_test.rs  comprehensive_types_test.rs  integration_test.rs  lifecycle_events_parity_test.rs  missing_python_coverage_test.rs  new_features_test.rs  raw_custom_events_parity_test.rs  round_trip_serialization_test.rs  simple_encoder_test.rs  sse_encoding_parity_test.rs  state_events_parity_test.rs  text_message_roles_test.rs  typescript_inspired_tests.rs  web.rs
rust-sdk/docs/: CLOUDFLARE_SETUP.md
