[package]
name = "ag-ui-wasm"
version = "0.1.0"
edition = "2021"
authors = ["AG-UI Protocol Contributors"]
description = "AG-UI Protocol SDK for V8 isolates (WASM)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ag-ui-protocol/rust-sdk"
keywords = ["ag-ui", "wasm", "cloudflare-workers", "streaming", "ai"]
categories = ["wasm", "web-programming", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "ResponseInit",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "TransformStream",
    "TransformStreamDefaultController",
    "TextEncoder",
    "TextDecoder",
    "AbortController",
    "AbortSignal",
    "Blob",
    "FormData",
    "Url",
    "EventSource",
    "MessageEvent",
    "ErrorEvent",
    "EventTarget",
    "Window",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "1.0"
bytes = "1.5"
pin-project = "1.1"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"
js-sys = "0.3"
web-sys = "0.3"

[features]
default = ["console_error_panic_hook"]

# For native development/testing (not for production)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] } 