[package]
name = "ag-ui-worker-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ag-ui-wasm = { path = "../.." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Headers", 
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",
    "ReadableStream",
    "ReadableStreamDefaultController",
    "TextEncoder",
    "Url"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
uuid = { version = "1.6", features = ["v4", "js"] }